@@ -15,6 +15,9 @@ xx/xx/2004 - 1.9.1-WIP
 	  and remove relevant FIXME comments.  (Yuval Fledel)
 	- Add new API security.[hc]::ntfs_guid_is_zero() and ntfs_guid_to_mbs().
 	- Implement dumping of object id in ntfsinfo.  (Yuval Fledel, me)
+	- Copy MFT_RECORD typedef to MFT_RECORD_OLD and modify MFT_RECORD to
+	  contain the NTFS 3.1+ specific fields.  Also, update mkntfs and
+	  ntfsclone appropriately.
 
 11/04/2004 - 1.9.0 - Added ntfsresize relocation support and a lot of cleanups.
 	- In include/ntfs/*.h Wrap all #include "config.h" by #ifdef
